--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     flex-direction: column;
     width: 400px;
     height: 500px;
+    padding: 10px;
+    background-color: #807979;
+    border-radius: 7px;
+    gap: 10px
 }
 
 .display {
@@ -14,17 +18,35 @@
     justify-content: flex-end;
     align-items: center;
     flex: 1;
+    padding: 6px;
+    border-radius: 6px;
+    background-color: black;
+}
+
+.display div {
+    color: white;
+    font-size: 60px;
+    flex: 1;
+    text-align: right;
+    padding-right: 7px;
+    background-color: gray;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .columnContainer {
     display: flex;
     flex: 6;
     flex-direction: column;
+    gap: 2px
 }
 
 .col {
     display: flex;   
     flex: 1;
+    gap: 2px;
+    padding: 3px;
+    border-radius: 6px;
+    background-color: black;
 }
 
 .col button {
@@ -32,8 +54,20 @@
     flex: 1;
     justify-content: center;
     align-items: center;
+    border-radius: 6px;
+    font-size: 30px;
+    color: white;
 }
 
-.col .zero {
-    flex: 2.18;
+
+.function {
+    background-color: dodgerblue;
+}
+
+.operator {
+    background-color: #FF8F1F;
+}
+
+.operand {
+    background-color: #217C7E;
 }
