--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
+@font-face { 
+    font-family: 'pixel';
+    src:url('pixel-purl-font/Pixelpurl-0vBPP.ttf');
+}
+
 * {
     box-sizing: border-box;
+    font-family: 'pixel';
 }
+
+html {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(templates/5.png);
+    min-height: 100%;
+}
+
 
 .container {
     display: flex;
@@ -25,12 +45,11 @@
 
 .display div {
     color: white;
-    font-size: 60px;
+    font-size: 70px;
     flex: 1;
     text-align: right;
     padding-right: 7px;
-    background-color: gray;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #42474a;
 }
 
 .columnContainer {
@@ -55,12 +74,12 @@
     justify-content: center;
     align-items: center;
     border-radius: 6px;
-    font-size: 30px;
+    font-size: 40px;
     color: white;
 }
 
 
-.function {
+.clear, .swap, .percent {
     background-color: dodgerblue;
 }
 
@@ -68,10 +87,12 @@
     background-color: #FF8F1F;
 }
 
-.operand.zero {
-    flex: 2.23;
-}
-
 .operand {
     background-color: #217C7E;
+}
+
+.header {
+    margin-bottom: 50px;
+    color: white;
+    font-size: 80px;
 }
